--- a/main.css
+++ b/main.css
@@ -9,8 +9,61 @@ body {
 }
 
 .map-container {
-    bottom:0;
+    bottom:2em;
+    left: 4em;
     position:absolute;
-    top:8em;
-    width: 80%;
+    width: 45%;
+    height: 77.5%;
+}
+
+.circle {
+  opacity: 50%;
+  stroke-opacity: 50%;
+}
+
+.predom-black{
+  fill: #9d8e64;
+}
+
+.predom-latinx{
+  fill: #6d7d53;
+}
+
+.predom-white{
+  fill: #30505a;
+}
+
+.predom-asian{
+  fill: #986769;
+}
+
+
+.interactive-container {
+  /* top:15em; */
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  /* width: 100%; */
+}
+
+.content-container {
+  top:15em;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 100%;
+}
+
+.filters-container {
+  align-items: center;
+  justify-content: center;
+  left: 5em;
+}
+
+.chart-container {
+  right: 2em;
+  position: absolute;
+  width: 45%;
+  font-family: "Roboto", sans-serif;
 }
