--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
     bottom:2em;
     left: 4em;
     position:absolute;
-    width: 45%;
+    width: 55%;
     height: 77.5%;
 }
 
@@ -56,6 +56,8 @@ body {
 }
 
 .filters-container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   left: 5em;
@@ -64,6 +66,6 @@ body {
 .chart-container {
   right: 2em;
   position: absolute;
-  width: 45%;
+  width: 35%;
   font-family: "Roboto", sans-serif;
 }
