--- a/main.css
+++ b/main.css
@@ -6,6 +6,11 @@ body {
     font-family: "Ledger";
     margin:0;
     padding:0;
+    height: 100%;
+}
+
+html, body {
+  height: 100%;
 }
 
 .circle {
@@ -39,9 +44,10 @@ body {
   display: flex;
   flex-direction: column;
   align-content: center;
-  height: inherit;
+  /* height: inherit; */
   width: 100%;
   position: relative;
+  height: 100%;
 
 }
 
@@ -59,27 +65,44 @@ body {
 
 .interactive-container {
   /* top:15em; */
-  right: 0;
+  /* right: 0; */
   bottom:1em;
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* justify-content: space-around; */
-  height: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
   width: 100%;
-  display: grid;
+  /* display: grid;
   grid-gap: 5em;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: repeat(1, 500px);
+  grid-template-rows: repeat(1, 500px); */
 
 }
 
+.chart-div-cont {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.tooltip-container {
+  position: relative;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+}
+#tooltip-inner {
+  position: absolute;
+}
+
 .map-container {
-    /* display: flex; */
+    display: flex;
+    justify-content: space-around;
     left: 4em;
     /* padding: 0 0 0 1em; */
     position:absolute;
     width: 50%;
-    height: inherit;
+    height: 90%;
 }
 
 .chart-container {
@@ -95,9 +118,25 @@ body {
 }
 
 .tooltip {
-  background-color: #E5E5E5;
+  background-color: #E9E9E9;
+  /* background-color: #fff; */
   border-color: #B5B5B5;
-  /* position: relative; */
-  /* border-radius: 0.25em; */
-  /* padding: 0.25em; */
+  color: #edb834;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.6em;
+  border-radius: 0.25em;
+  padding: 0.45em;
+}
+
+.button-container{
+  padding: 0.75em;
+}
+
+.text-centered{
+  align: center;
+}
+
+
+.map-dots {
+  z-index: 999;
 }
