--- a/main.css
+++ b/main.css
@@ -14,8 +14,8 @@ html, body {
 }
 
 .circle {
-  opacity: 50%;
-  stroke-opacity: 50%;
+  opacity: .75;
+  stroke-opacity: .1;
 }
 
 .predom-black{
@@ -53,6 +53,7 @@ html, body {
 
 .filter-radio {
   font-size: 2em;
+  margin: 0.15em 0.5em 0 0.25em;
 }
 
 .filters-container {
@@ -64,19 +65,12 @@ html, body {
 }
 
 .interactive-container {
-  /* top:15em; */
-  /* right: 0; */
-  bottom:1em;
+  margin: 0 0 2em 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 100%;
   width: 100%;
-  /* display: grid;
-  grid-gap: 5em;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: repeat(1, 500px); */
-
 }
 
 .chart-div-cont {
@@ -117,11 +111,28 @@ html, body {
   font-family: "Roboto", sans-serif;
 }
 
+
+.leaflet-tooltip
+.leaflet-tooltip-top,
+.leaflet-tooltip-left,
+.leaflet-tooltip-right,
+.leaflet-tooltip-bottom {
+  background-color: #E9E9E9;
+  /* background-color: #edb834; */
+  border-color: #B5B5B5;
+  /* color: #edb834; */
+  font-family: "Roboto", sans-serif;
+  font-size: 0.6em;
+  border-radius: 0.25em;
+  padding: 0.45em;
+}
+
+
 .tooltip {
   background-color: #E9E9E9;
-  /* background-color: #fff; */
+  /* background-color: #edb834; */
   border-color: #B5B5B5;
-  color: #edb834;
+  /* color: #edb834; */
   font-family: "Roboto", sans-serif;
   font-size: 0.6em;
   border-radius: 0.25em;
@@ -129,14 +140,72 @@ html, body {
 }
 
 .button-container{
-  padding: 0.75em;
+  margin: 0.5em 0 2em 0 ;
 }
 
-.text-centered{
+.button {
+  /* Button state shadowing adapted from:
+  https://codepen.io/LeoPragi/pen/gzrGoG
+  https://speckyboy.com/create-stylish-css-buttons/  */
+  margin: 0 0 0 1em;
+  background-color: #F1F1F1;
+  border: none;
+  border-radius: 0.25em;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.85em;
+  box-shadow: inset 0 0 0 0.03em #6c6464
+}
+
+.button:hover,
+.button.hover {
+  background-color: #a8a8a8;
+  box-shadow: 0 0.02em 0.6em #6c6464;
+  transform: translateY(-3px);
+}
+
+.button:active,
+.button.active {
+  box-shadow: inset 0 0 0 0.03em #6c6464,inset 0 0.06em 0.5em #193047;
+}
+
+.button.clicked {
+  background-color: #E9E9E9;
+  color: #a8a8a8
+}
+
+/* .text-centered {
   align: center;
-}
-
+} */
 
 .map-dots {
   z-index: 999;
+}
+
+/* Clarity on AM ''::after' suggestion from
+https://www.w3schools.com/cssref/tryit.asp?filename=trycss_sel_after,
+adapted into my '::before' code */
+label::before {
+  content: "●";
+  margin-right: 0.25em;
+}
+
+.xaxis,
+.yaxis {
+  font-weight: bold;
+  font-family: "Ledger";
+  font-size: 0.85em;
+}
+
+.circle.active,
+.circle.active-hold {
+  /* stroke: #810000; */
+  stroke: #edb834;
+  stroke-width: 3;
+  opacity: 1;
+  stroke-opacity: 1;
+  z-index: 999;
+}
+
+.caption{
+  font-size: 0.75em;
 }
