--- a/main.css
+++ b/main.css
@@ -206,6 +206,27 @@ label::before {
   z-index: 999;
 }
 
+.map-dots:hover {
+  color: #810000;
+  fill: #edb834;
+  /* fillColor: #edb834; */
+  stroke-width: 3;
+  opacity: 1;
+  stroke-opacity: 1;
+  z-index: 999;
+}
+
+/* .map-dots.leaflet-interactive:hover {
+  color: #edb834;
+  fillColor: #edb834;
+  stroke: #810000;
+  stroke-width: 3;
+  opacity: 1;
+  stroke-opacity: 1;
+  z-index: 999;
+} */
+
+
 .caption{
   font-size: 0.75em;
 }
