--- a/main.css
+++ b/main.css
@@ -120,11 +120,12 @@ html, body {
   background-color: #E9E9E9;
   /* background-color: #edb834; */
   border-color: #B5B5B5;
-  /* color: #edb834; */
+  color: black;
   font-family: "Roboto", sans-serif;
-  font-size: 0.6em;
-  border-radius: 0.25em;
+  font-size: 0.75em;
+  border-radius: 0.5em;
   padding: 0.45em;
+  opacity: .65;
 }
 
 
@@ -135,7 +136,7 @@ html, body {
   /* color: #edb834; */
   font-family: "Roboto", sans-serif;
   font-size: 0.6em;
-  border-radius: 0.25em;
+  border-radius: 0.35em;
   padding: 0.45em;
 }
 
@@ -206,25 +207,32 @@ label::before {
   z-index: 999;
 }
 
-.map-dots:hover {
+/* .map-dots:hover {
   color: #810000;
-  fill: #edb834;
-  /* fillColor: #edb834; */
-  stroke-width: 3;
-  opacity: 1;
-  stroke-opacity: 1;
-  z-index: 999;
-}
-
-/* .map-dots.leaflet-interactive:hover {
-  color: #edb834;
-  fillColor: #edb834;
   stroke: #810000;
+  fill: #edb834;
+  fillColor: #edb834;
   stroke-width: 3;
   opacity: 1;
   stroke-opacity: 1;
   z-index: 999;
 } */
+
+.map-dots.leaflet-interactive:hover,
+.map-dots.active,
+.map-dots.active-hold {
+/* .map-dots.active-hold  */
+  color: #edb834;
+  stroke: #810000;
+  fillColor: #edb834;
+  stroke-width: 3;
+  opacity: 1;
+  stroke-opacity: 1;
+  z-index: 999;
+  zIndexOffset: 999;
+  ForceZIndex: 999;
+}
+
 
 
 .caption{
