--- a/main.css
+++ b/main.css
@@ -182,7 +182,7 @@ html, body {
   z-index: 999;
 }
 
-/* Clarity on AM ''::after' suggestion from
+/* Clarity on AMcN '::after' suggestion from
 https://www.w3schools.com/cssref/tryit.asp?filename=trycss_sel_after,
 adapted into my '::before' code */
 label::before {
@@ -204,7 +204,12 @@ label::before {
   stroke-width: 3;
   opacity: 1;
   stroke-opacity: 1;
-  z-index: 999;
+}
+
+.circle.inactive,
+.map-dots.inactive {
+  opacity: 0.35;
+  stroke-opacity: 0.35;
 }
 
 /* .map-dots:hover {
