--- a/main.css
+++ b/main.css
@@ -82,11 +82,11 @@ html, body {
 .chart-div-cont {
   display: flex;
   height: 100%;
-  width: 90%;
+  width: 100%;
 }
 
 .tooltip-container {
-  position: relative;
+  position: absolute;
   pointer-events: none;
   width: 100%;
   height: 100%;
@@ -98,15 +98,14 @@ html, body {
 .map-container {
     display: flex;
     justify-content: space-around;
-    left: 14em;
-    position:absolute;
-    width: 35%;
-    height: 90%;
+    margin-left: 3em;
+    position:relative;
+    width: 100%;
+    height: 100%;
 }
 
 .map-legend-cont {
-  left: 0.02%;
-  right: 0.0025%;
+  margin-left: 1em;
   width: 15%
   display: flex;
   z-index: 20000;
@@ -117,15 +116,18 @@ html, body {
 #map-legend {
   background-color: #f1f0e8;
   border-radius: 0.35em;
+  margin-left: 1em;
 }
+
+
 
 .chart-container {
   display: flex;
   flex-direction: row;
-  right: 0.05%;
+  margin-left: 2em;
   height: inherit;
-  position: absolute;
-  width: 35%;
+  position: relative;
+  width: 100%;
   font-family: "Roboto", sans-serif;
 }
 
@@ -159,7 +161,7 @@ html, body {
 }
 
 .button-container{
-  margin: 0.5em 0 2em 0 ;
+  margin: 2em 0 2em 0;
 }
 
 .button {
@@ -235,6 +237,7 @@ label::before {
   color: #edb834;
   /* stroke: #810000; */
   /* fillColor: #edb834; */
+  fill-opacity: 1;
   opacity: 1;
   stroke-opacity: 1;
   z-index: 10000
@@ -243,6 +246,7 @@ label::before {
 .map-dots.active-hold {
   stroke: #fff;
   stroke-width: 1.5;
+  fill-opacity: 1;
 }
 
 .colorLegend {
