--- a/main.css
+++ b/main.css
@@ -283,6 +283,12 @@ label::before {
   font-size: 0.75em;
 }
 
+.footer {
+  font-size: 0.75em;
+  align: center;
+  margin-bottom: 0;
+  margin-top: 0;
+}
 
 .title {
   font-family: "Ledger";
