--- a/main.css
+++ b/main.css
@@ -39,12 +39,9 @@ html, body {
 }
 
 .content-container {
-  /* top:15em; */
-  /* right: 0; */
   display: flex;
   flex-direction: column;
   align-content: center;
-  /* height: inherit; */
   width: 100%;
   position: relative;
   height: 100%;
@@ -67,23 +64,33 @@ html, body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* left: 5em; */
 }
 
 .interactive-container {
-  margin: 0 0 2em 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   height: 100%;
   width: 100%;
+  margin-left: 2em;
 }
 
 .chart-div-cont {
   display: flex;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 }
+
+#chart-area {
+  width: 100%;
+}
+
+.chart-div-cont.second-one {
+  margin-left: 3em;
+  margin-right: 2em;
+  width: 100%;
+}
+
 
 .tooltip-container {
   position: absolute;
@@ -96,27 +103,21 @@ html, body {
 }
 
 .map-container {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 3em;
-    position:relative;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: space-around;
+  position:relative;
+  width: 100%;
+  height: 100%;
 }
 
 .map-legend-cont {
-  margin-left: 1em;
-  width: 15%
+  width: 100%;
   display: flex;
-  z-index: 20000;
   position: relative;
   bottom:0;
-}
-
-#map-legend {
-  background-color: #f1f0e8;
-  border-radius: 0.35em;
-  margin-left: 1em;
+  height: 15%;
+  align-items: center;
+  justify-content: center;
 }
 
 .legendSize {
@@ -127,7 +128,6 @@ html, body {
 .chart-container {
   display: flex;
   flex-direction: row;
-  margin-left: 2em;
   height: inherit;
   position: relative;
   width: 100%;
@@ -141,7 +141,6 @@ html, body {
 .leaflet-tooltip-right,
 .leaflet-tooltip-bottom {
   background-color: #E9E9E9;
-  /* background-color: #edb834; */
   border-color: #B5B5B5;
   color: black;
   font-family: "Roboto", sans-serif;
@@ -154,9 +153,7 @@ html, body {
 
 .tooltip {
   background-color: #E9E9E9;
-  /* background-color: #edb834; */
   border-color: #B5B5B5;
-  /* color: #edb834; */
   font-family: "Roboto", sans-serif;
   font-size: 0.6em;
   border-radius: 0.35em;
@@ -191,7 +188,6 @@ html, body {
 .button.hover {
   background-color: #a8a8a8;
   box-shadow: 0.75 0.35em 0.20em #6c6464;
-  /* transform: translateY(-1px); */
   border: #fff;
   border-width: 3;
 }
@@ -230,9 +226,11 @@ label::before {
 
 .circle.active,
 .circle.active-hold {
-  /* stroke: #810000; */
-  stroke: #edb834;
-  stroke-width: 3;
+  /* Alex -- none of the colors that looked good with the scatterplot showed
+  well on the map, and vice versa. I did do a lot of experimenting, but I like
+  it best with two colors  */
+  stroke: #fff;
+  stroke-width: 1.5;
   opacity: 1;
   stroke-opacity: 1;
   z-index: 10000
@@ -247,10 +245,9 @@ label::before {
 .map-dots.leaflet-interactive:hover,
 .map-dots.active,
 .map-dots.active-hold {
-/* .map-dots.active-hold  */
-  color: #edb834;
-  /* stroke: #810000; */
-  /* fillColor: #edb834; */
+  /* Alex -- none of the colors that looked good with the scatterplot showed
+  well on the map, and vice versa. I did do a lot of experimenting, but I like
+  it best with two colors  */
   stroke: #fff;
   stroke-width: 1.5;
   fill-opacity: 1;
@@ -295,10 +292,16 @@ label::before {
 
 .title {
   font-family: "Ledger";
-  font-size: 0.9em;
+  font-size: 1.25em;
 }
 
 .subtitle {
   font-family: "Ledger";
-  font-size: 0.8em;
+  font-size: 1em;
+}
+
+g.cell circle.swatch  {
+  fill: transparent;
+  stroke: black;
+  stroke-width: 1;
 }
